# GoHighLevel-CLI

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/ghl/: Cargo.toml
crates/ghl-cli/: Cargo.toml
crates/ghl-cli/src/: commands.rs  lib.rs  main.rs  output.rs
crates/ghl-cli/tests/: cli.rs
crates/ghl/src/: appointment_notes.rs  appointments.rs  audit.rs  auth.rs  calendars.rs  capabilities.rs  client.rs  config.rs  contacts.rs  context.rs  conversations.rs  credentials.rs  doctor.rs  endpoints.rs  errors.rs  idempotency.rs  lib.rs  locations.rs  metadata.rs  opportunities.rs  pipelines.rs  profiles.rs  redaction.rs  smoke.rs  surfaces.rs  users.rs
data/: endpoints.json  errors.json  reference-tools.json
docs/: API-COVERAGE.md  AUDIT.md  CAPABILITIES.md  COMMANDS.md  CONFIG.md  ENDPOINTS.md  ERRORS.md  FEATURE-PARITY.md  INSTALL.md  NETWORK.md  ROADMAP.md  SCHEMAS.md  SECURITY.md  SMOKE.md  SPEC.md
