[workspace]
members = ["crates/ghl", "crates/ghl-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT"
repository = "https://github.com/NicholaiVogel/GHL-CLI"
homepage = "https://github.com/NicholaiVogel/GHL-CLI"
authors = ["Nicholai Vogel"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
dirs = "6.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = { version = "2.5", features = ["serde"] }

[profile.dist]
inherits = "release"
lto = "thin"
