[package]
name = "ghl-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Unofficial Go High Level CLI for humans, scripts, and AI agents."
default-run = "ghl-cli"
readme = "../../README.md"
keywords = ["ghl", "gohighlevel", "cli", "crm", "agents"]
categories = ["command-line-utilities"]

[[bin]]
name = "ghl-cli"
path = "src/main.rs"

[[bin]]
name = "ghl"
path = "src/bin/ghl.rs"

[dependencies]
clap.workspace = true
clap_complete.workspace = true
ghl = { path = "../ghl", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.13"
