[package]
name = "ghl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Core library for the unofficial Go High Level CLI."
readme = "../../README.md"

[dependencies]
dirs.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
httpmock = "0.7"
tempfile = "3.13"
